@@ -253,7 +253,9 @@
     "DroneStrikeRegen": "Drones launched by %1$s have a %2$s chance of being quickly replaced. Destroying a frigate-sized or larger ship with a launched terminator drone boosts fighter replacement rate by %3$s.",
     "DroneStrikeRegenPost": "The replacement rate increase will only trigger if the drone deals the finishing blow.",
     "BackArmorBoost": "Increases armor rating toward the back of this ship by up to %1$s.",
-    "BackArmorBoostPost": "Armor plates above the ship's center lines are not affected at all, whereas extremal armor plates gain the maximum effect. Doesn't affect minimum armor fraction for damage reduction calculation.",
+    "BackArmorBoostPost": "Armor plates above the ship's center line are not affected. Doesn't affect minimum armor fraction for damage reduction calculation.",
+    "FrontArmorBoost": "Increases armor rating toward the front of this ship by up to %1$s.",
+    "FrontArmorBoostPost": "Armor plates below the ship's center line are not affected. Doesn't affect minimum armor fraction for damage reduction calculation.",
     "FlareLauncherWhileVenting": "While venting, all flare-type weapons periodically fire at a rate of %1$s per second.",
     "FlareLauncherWhileVentingPost": "Effect only occurs during active venting and not while passively venting or while the ship is overloaded.",
     "ShieldEfficiencyNearbyEnemies": "Reduces shield damage taken by %1$s for every frigate-sized or larger enemy ship within %2$s su.",
