@@ -9,17 +9,17 @@ import shipmastery.mastery.MasteryDescription;
 import shipmastery.util.Strings;
 import shipmastery.util.Utils;
 
-public class BackArmorBoost extends BaseMasteryEffect {
+public class FrontArmorBoost extends BaseMasteryEffect {
     @Override
     public MasteryDescription getDescription(ShipAPI selectedModule, FleetMemberAPI selectedFleetMember) {
-        return MasteryDescription.initDefaultHighlight(Strings.Descriptions.BackArmorBoost).params(
+        return MasteryDescription.initDefaultHighlight(Strings.Descriptions.FrontArmorBoost).params(
                 Utils.asPercent(getStrength(selectedModule)));
     }
 
     @Override
     public void addPostDescriptionSection(TooltipMakerAPI tooltip, ShipAPI selectedModule,
                                           FleetMemberAPI selectedFleetMember) {
-        tooltip.addPara(Strings.Descriptions.BackArmorBoostPost, 0f);
+        tooltip.addPara(Strings.Descriptions.FrontArmorBoostPost, 0f);
     }
 
     @Override
@@ -27,7 +27,7 @@ public class BackArmorBoost extends BaseMasteryEffect {
         float strength = getStrength(ship);
         float[][] grid = ship.getArmorGrid().getGrid();
         for (int i = 0; i < grid[0].length; i++) {
-            float effectLevel = Math.max(0f, 2f * ((float) grid[0].length / 2f - i) / grid[0].length);
+            float effectLevel = Math.max(0f, 2f * (i - (float) grid[0].length / 2f) / grid[0].length);
             if (effectLevel  <= 0f) continue;
             for (int j = 0; j < grid.length; j++) {
                 grid[j][i] += grid[j][i] * effectLevel * strength;
@@ -39,6 +39,6 @@ public class BackArmorBoost extends BaseMasteryEffect {
     public Float getSelectionWeight(ShipHullSpecAPI spec) {
         if (spec.isCivilianNonCarrier()) return null;
         if (spec.getArmorRating() < 400f) return null;
-        return 0f;
+        return Utils.getSelectionWeightScaledByValueDecreasing(Utils.getShieldToHullArmorRatio(spec), 0f, 1f, 2.5f);
     }
 }
